# NDKDemo

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zhao/myndkapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jniapi-lib.cpp  native-lib.cpp
app/src/main/java/com/zhao/myndkapplication/: JNIApiUtils.kt  JNIUtils.kt  MainActivity.kt  TextBean.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/zhao/myndkapplication/: ExampleUnitTest.kt
gifapplication/: build.gradle
gifapplication/src/androidTest/java/com/zhao/gifapplication/: ExampleInstrumentedTest.kt
gifapplication/src/main/: AndroidManifest.xml
gifapplication/src/main/c/: CMakeLists.txt  bitmap.c  gif.c  gif.h  metadata.c  opengl.c
gifapplication/src/main/c/giflib/: gif_lib.h
gifapplication/src/main/java/com/zhao/gifapplication/: GifLoader.kt  GifUtils.java  MainActivity.kt  Test.java
gifapplication/src/main/res/layout/: content_main.xml
gifapplication/src/main/res/menu/: menu_main.xml
gifapplication/src/main/res/values/: strings.xml
gifapplication/src/test/java/com/zhao/gifapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jsonso/: build.gradle
jsonso/src/androidTest/java/com/zhao/jsonso/: ExampleInstrumentedTest.kt
jsonso/src/main/: AndroidManifest.xml
jsonso/src/main/cpp/jsoncpp/: CMakeLists.txt
jsonso/src/main/java/com/zhao/jsonso/: JsonJNIUtil.kt  (+1 more)
jsonso/src/main/res/layout/: activity_json_so.xml
jsonso/src/main/res/values/: strings.xml
(+7 files in other folders)
